--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.3"
   },
   "devDependencies": {
-    "jscs": "^2.3.0"
+    "jscs": "^2.3.0",
+    "nodemon": "^1.7.1"
   }
 }
